--- a/index.html
+++ b/index.html
@@ -19,74 +19,74 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div id="hour-9" class="row time-block">
+      <div id="9" class="row time-block">
         <div class="col-md-1 hour">
           9AM
         </div>
-        <textarea id="entry1" class="col-md-10 description" placeholder="What do we have planned?"></textarea>
+        <textarea class="col-md-10 description" placeholder="What do we have planned?"></textarea>
         <button id="save" class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
-      <div id="hour-10" class="row time-block">
+      <div id="10" class="row time-block">
         <div class="col-md-1 hour">
           10AM
         </div>
-        <textarea id="entry2" class="col-md-10 description" placeholder="What do we have planned?"></textarea>
+        <textarea class="col-md-10 description" placeholder="What do we have planned?"></textarea>
         <button id="save" class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
-      <div id="hour-11" class="row time-block">
+      <div id="11" class="row time-block">
         <div class="col-md-1 hour">
           11AM
         </div>
-        <textarea id="entry3" class="col-md-10 description" placeholder="What do we have planned?"></textarea>
+        <textarea class="col-md-10 description" placeholder="What do we have planned?"></textarea>
         <button id="save" class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
-      <div id="hour-12" class="row time-block">
+      <div id="12" class="row time-block">
         <div class="col-md-1 hour">
           12PM
         </div>
-        <textarea id="entry4" class="col-md-10 description" placeholder="What do we have planned?"></textarea>
+        <textarea class="col-md-10 description" placeholder="What do we have planned?"></textarea>
         <button id="save" class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
-      <div id="hour-13" class="row time-block">
+      <div id="13" class="row time-block">
         <div class="col-md-1 hour">
           1PM
         </div>
-        <textarea id="entry5" class="col-md-10 description" placeholder="What do we have planned?"></textarea>
+        <textarea class="col-md-10 description" placeholder="What do we have planned?"></textarea>
         <button id="save" class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
-      <div id="hour-14" class="row time-block">
+      <div id="14" class="row time-block">
         <div class="col-md-1 hour">
           2PM
         </div>
-        <textarea id="entry5" class="col-md-10 description" placeholder="What do we have planned?"></textarea>
+        <textarea class="col-md-10 description" placeholder="What do we have planned?"></textarea>
         <button id="save" class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
-      <div id="hour-15" class="row time-block">
+      <div id="15" class="row time-block">
         <div class="col-md-1 hour">
           3PM
         </div>
-        <textarea id="entry6" class="col-md-10 description" placeholder="What do we have planned?"></textarea>
+        <textarea class="col-md-10 description" placeholder="What do we have planned?"></textarea>
         <button id="save" class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
-      <div id="hour-16" class="row time-block">
+      <div id="16" class="row time-block">
         <div class="col-md-1 hour">
           4PM
         </div>
-        <textarea id="entry7" class="col-md-10 description" placeholder="What do we have planned?"></textarea>
+        <textarea class="col-md-10 description" placeholder="What do we have planned?"></textarea>
         <button id="save" class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
-      <div id="hour-17" class="row time-block">
+      <div id="17" class="row time-block">
         <div class="col-md-1 hour">
           5PM
         </div>
         <textarea id="entry8" class="col-md-10 description" placeholder="What do we have planned?"></textarea>
         <button id="save" class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
-      <div id="hour-18" class="row time-block">
+      <div id="18" class="row time-block">
         <div class="col-md-1 hour">
           6PM
         </div>
-        <textarea id="entry9" class="col-md-10 description" placeholder="What do we have planned?"></textarea>
+        <textarea class="col-md-10 description" placeholder="What do we have planned?"></textarea>
         <button id="save" class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
     </div> 
